--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo.svg" type="image/*" />
+    <link rel="icon" href="/monotreme.png" type="image/png" />
     <meta name="theme-color" content="#FFFFFF" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <!-- slash.metadata -->
-    <title>Slash</title>
+    <!-- monotreme.metadata -->
+    <title>Monotreme</title>
   </head>
   <body>
     <div id="root"></div>
